# tsync

./: .env  .gitignore  MANIFEST.in  README.md  ai_template.txt  db_setup.py  pyproject.toml  requirements.txt  test_parser.py  tsync.db  tsync.py
data/: Blatt 7 _ RWTHmoodleafi.html  Test - T-Sync.html  bl05ds.html  bl05ds2.html  bl06ds.html  bl07afi.html  bl07afi2.html  bl6.html  ti7.html
data/Test - T-Sync_files/: style.css
data/bl05ds2_files/: commandline_002.html
data/bl05ds_files/: combo_002
data/bl07afi2_files/: styles_002.css
data/eTest 7 [Bonus] - Kapitel 6 _ RWTHmoodle_files/: styles_002.css
src/tsync/: __init__.py  ai_answer.py  app.py  auth.py  db.py  db_setup.py  test_parser.py  test_parserv2.py  test_test_parser.py  tsync.py  utils.py
src/tsync/static/: account.css  dad.js  moodlestyle.css  style.css  tsync.user.css
src/tsync/templates/: accounttmpl.html  indextmpl.html  layout.html  logintmpl.html  resourcestmpl.html  tampermonkeytmpl.html  testnotfoundtmpl.html  testtmpl.html  testtmpl_v2.html  tsync.user.js  typermonkeytmpl.html
static/: style.css
templates/: indextmpl.html  layout.html  logintmpl.html  testtmpl.html
tests/: parse_test.py
